--- a/Sandbox/CSS/sidebar.css
+++ b/Sandbox/CSS/sidebar.css
@@ -5,8 +5,12 @@ body {
 
 .sidebar {
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
     height: 100vh;
     width: 15vh;
+    min-width: 300px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background: #34495e;
 }
@@ -14,4 +18,5 @@ body {
 .item {
     color: white;
     font-size: 20px;
+    padding: 10px;
 }
